refactor(backend): migrate GetSunTimesUseCase to Cache<SunTimes>