@@ -2,8 +2,8 @@ package io.ythalorossy.weatherapi.application.usecase;
 
 import io.ythalorossy.weatherapi.domain.model.Location;
 import io.ythalorossy.weatherapi.domain.model.SunTimes;
+import io.ythalorossy.weatherapi.domain.port.Cache;
 import io.ythalorossy.weatherapi.domain.port.LocationMetadataProvider;
-import io.ythalorossy.weatherapi.domain.port.SunTimesCache;
 import io.ythalorossy.weatherapi.domain.port.SunTimesProvider;
 
 import java.time.Duration;
@@ -15,14 +15,14 @@ import java.util.Optional;
 public class GetSunTimesUseCase {
 
     private final SunTimesProvider sunTimesProvider;
-    private final SunTimesCache sunTimesCache;
+    private final Cache<SunTimes> sunTimesCache;
     private final LocationResolver locationResolver;
     private final LocationMetadataProvider metadataProvider;
     private final Duration cacheTtl;
 
     public GetSunTimesUseCase(
             SunTimesProvider sunTimesProvider,
-            SunTimesCache sunTimesCache,
+            Cache<SunTimes> sunTimesCache,
             LocationResolver locationResolver,
             LocationMetadataProvider metadataProvider,
             Duration cacheTtl) {
@@ -30,7 +30,8 @@ public class GetSunTimesUseCase {
         this.sunTimesCache = Objects.requireNonNull(sunTimesCache, "sunTimesCache");
         this.locationResolver = Objects.requireNonNull(locationResolver, "locationResolver");
         this.metadataProvider = Objects.requireNonNull(metadataProvider, "metadataProvider");
-        this.cacheTtl = requirePositive(cacheTtl, "cacheTtl");
+        CacheAside.requirePositive(cacheTtl, "cacheTtl");
+        this.cacheTtl = cacheTtl;
     }
 
     public Optional<SunTimes> execute(String cityName) {
@@ -39,7 +40,7 @@ public class GetSunTimesUseCase {
                 .map(o -> ZoneId.of(o.timezoneId()))
                 .orElse(ZoneId.of("UTC"));
         LocalDate today = LocalDate.now(zone);
-        String key = String.format("sun:%.2f,%.2f:%s", location.latitude(), location.longitude(), today);
+        String key = "%.2f,%.2f:%s".formatted(location.latitude(), location.longitude(), today);
 
         Optional<SunTimes> cached = sunTimesCache.get(key);
         if (cached.isPresent()) return cached;
@@ -48,13 +49,5 @@ public class GetSunTimesUseCase {
         if (fresh.isEmpty()) return Optional.empty();
         sunTimesCache.put(key, fresh.get(), cacheTtl);
         return fresh;
-    }
-
-    private static Duration requirePositive(Duration ttl, String name) {
-        Objects.requireNonNull(ttl, name);
-        if (ttl.isZero() || ttl.isNegative()) {
-            throw new IllegalArgumentException(name + " must be positive: " + ttl);
-        }
-        return ttl;
     }
 }
